--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,13 @@
 {
   "name": "Youtube Playlist Generator",
   "description": "Create Youtube Playlist from all linked videos in a page.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "manifest_version": 2,
   "permissions": ["activeTab", "tabs", "https://www.youtube.com/"],
   "browser_action": {
     "default_popup": "./popup.html"
+  },
+  "background": {
+    "scripts": ["./background.js"]
   }
 }
