--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,14 @@
 {
   "name": "Youtube Playlist Generator",
   "description": "Create Youtube Playlist from all linked videos in a page.",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "manifest_version": 2,
+  "icons": {
+    "16": "./icons/16.png",
+    "32": "./icons/32.png",
+    "48": "./icons/48.png",
+    "128": "./icons/128.png"
+  },
   "permissions": ["activeTab", "tabs", "https://www.youtube.com/", "identity"],
   "browser_action": {
     "default_popup": "./popup/popup.html"
