--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "browser_action": {
     "default_popup": "./popup/popup.html"
   },
-  "description": "Create Youtube Playlist from all linked videos in a page.",
+  "description": "Add all linked videos in a page to Youtube playlists.",
   "icons": {
     "16": "./icons/16.png",
     "32": "./icons/32.png",
@@ -31,5 +31,5 @@
     "https://www.youtube.com/",
     "identity"
   ],
-  "version": "0.0.11"
+  "version": "0.0.12"
 }
